import { render, screen } from '@testing-library/react'
import { axe } from 'jest-axe'
import React from 'react'

describe(`Radio component`, () => {
  it('renders a radio', () => {
    expect(false)
  })
})
